# python-chebifier

./: .gitignore  README.md  pyproject.toml
api/: __main__.py  api_registry.yml  cli.py  hugging_face.py  registry.yml  setup_env.py
chebifier/: __init__.py  __main__.py  _custom_cache.py  cli.py  ensemble.yml  hugging_face.py  inconsistency_resolution.py  model_registry.py  model_registry.yml  utils.py
chebifier/ensemble/: _custom_cache.py  base_ensemble.py  weighted_majority_ensemble.py
chebifier/prediction_models/: __init__.py  base_predictor.py  c3p_predictor.py  chebi_lookup.py  chemlog_predictor.py  electra_predictor.py  gnn_predictor.py  nn_predictor.py
configs/: example_config.yml  huggingface_config.yml
data/: disjoint_additional.csv
tests/: test_cache.py
