[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chebifier"
version = "0.1.0"
description = "An AI ensemble model for predicting chemical classes"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Simon Flügel", email = "simon.fluegel@uni-osnabrueck.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "pyyaml",
    "torch",
    "tqdm",
    "rdkit",
]

[project.scripts]
chebifier = "chebifier.cli:cli"


[tool.setuptools]
packages = ["chebifier", "chebifier.ensemble", "chebifier.prediction_models"]
